@@ -194,24 +194,5 @@
 (autoload-command 'send-to-workspace-right 'sawfish.wm.ext.workspace-grid)
 (autoload-command (quote set-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))))
 (autoload-command (quote set-window-viewport-linear) (quote "viewport-linear") #:type (backquote (and (labelled (backquote-unquote (_ "Index:")) (number 0)))))
-(autoload-command 'set-viewport-linear:1 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:1 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:2 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:2 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:3 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:3 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:4 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:4 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:5 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:5 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:6 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:6 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:7 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:7 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:8 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:8 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-viewport-linear:9 'sawfish.wm.commands.viewport-linear)
-(autoload-command 'set-window-viewport-linear:9 'sawfish.wm.commands.viewport-linear)
 (autoload-command 'jump-or-exec 'sawfish.wm.commands.jump-or-exec)
-(autoload-command 'maybe-raise-tab 'sawfish.wm.tabs.tabgroup)
 ;;; ::autoload-end::
