@@ -1,3 +1,7 @@
+2011-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/autoload.jl: removed maybe-raise-tab
+	from autoload, aswell as viewport-linear stuff
+
 2011-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum rep to 0.92.0
 
